# quote-server

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  add-quote.sh
.github/workflows/: ci.yami  ci.yaml
.sqlx/: query-1cd1d841f5e55d4ccb5759f465de132776dc584ed016f0fabb808d56637bb12f.json  query-45fb584374c72ab708edb0a1f9b08afe17b7ce0d217d6e158a2c6dcbd2815906.json  query-8441f3eb2acabe1be56042f898a9295526e330b823dd45aa486c9fa8a855afa3.json  query-9534d3980afca2d446d0dd0af77683b6f7bbfe49e947d7500ca8638f56d73d3c.json  query-bb0ffb00e0633952473c287061200ae97bc1ccaca9033fc45430935979373a93.json  query-f525cf7caa1c7aea2c1d6146776758e22cdf2d632d3bc5477de3eb2e996340e0.json
assets/static/: quotes.json
assets/templates/: index.html
migrations/: 0001_create.up.sql  0001_create_quote_tables.up.sql  0002_full_quote.down.sql  0002_full_quote.up.sql
src/: api.rs  authjwt.rs  error.rs  main.rs  quote.rs  templates.rs  web.rs
