[package]
name = "quote_server"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.14.0"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
async-trait = "0.1.80"
chrono = { version = "0.4.41", features = ["serde"] }
log = "0.4.27"
mime = "0.3.17"
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
dotenvy = "0.15"
jsonwebtoken = "9.3.1"
fastrand = "2.3.0"


[dependencies.clap]
version = "4.5.38"
features = ["derive", "env"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.tokio]
version = "1.45.0"
features = ["full", "macros", "signal"]

[dependencies.tower-http]
version = "0.6.4"
features = ["fs", "trace", "cors"]

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["env-filter"]

[dependencies.sqlx]
version = "0.8.6"
features = [
    "runtime-tokio",
    "sqlite",
    "derive",
    "macros",
    "migrate",
    "chrono",
    "json"
]

[dependencies.utoipa]
git = "https://github.com/juhaku/utoipa.git"
rev = "cecda0531bf7d90800af66b186055932ee730526"
features = ["axum_extras", "chrono"]

[dependencies.utoipa-axum]
git = "https://github.com/juhaku/utoipa.git"
rev = "cecda0531bf7d90800af66b186055932ee730526"

[dependencies.utoipa-rapidoc]
git = "https://github.com/juhaku/utoipa.git"
rev = "cecda0531bf7d90800af66b186055932ee730526"
features = ["axum"]

[dependencies.utoipa-redoc]
git = "https://github.com/juhaku/utoipa.git"
rev = "cecda0531bf7d90800af66b186055932ee730526"
features = ["axum"]

[dependencies.utoipa-swagger-ui]
git = "https://github.com/juhaku/utoipa.git"
rev = "cecda0531bf7d90800af66b186055932ee730526"
features = ["axum"]
